# nexus-ai

./: .gitignore  .vercelignore  BUILD_AND_TEST.md  LICENSE  NEXUS_AI_사용설명서.md  NEXUS_TEST_REPORT.md  OPTION_B_ROADMAP.md  PRODUCT_DESCRIPTION.md  QUICK_TEST.bat  README.md  SALES_COPY.md  SETUP.bat  Windows_빌드_가이드.md  Windows_빌드_실행.md  build-on-windows.ps1  build-portable-exe.sh  build-windows.sh  build.sh  build_go_only.bat  build_log.txt  build_windows.bat  entitlements.plist  index.html  mac_to_windows_export.sh  nexus-fulltest.py  package-lock.json  package.json  setup_and_build.ps1  smoke-test-auth.ps1  smoke-test.ps1  tailwind.config.ts  test_90_results.json  test_all_90.py  test_rerun_failures.py  vite.config.ts  진단.bat
.cargo/: config.toml
backend/: .env.example  go.mod  go.sum  handlers.go  handlers_advanced.go  handlers_api_keys.go  handlers_api_keys_stub.go  handlers_auth_callback.go  handlers_auth_callback_stub.go  handlers_briefing.go  handlers_briefing_stub.go  handlers_browser.go  handlers_browser_agent.go  handlers_browser_common.go  handlers_browser_pdf.go  handlers_browser_stealth.go  handlers_browser_stub.go  handlers_calendar.go  handlers_caption.go  handlers_clipboard_stub.go  handlers_clipboard_windows.go  handlers_cmd_content.go  handlers_cmd_search.go  handlers_cmd_types.go  (+135 more)
src-tauri/: Cargo.toml  LICENSE.txt  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/binaries/: backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_callback.html  main.rs
(+192 files in other folders)
